fixed bug where days were separated by too much in calendar view

--- a/public/stylesheets/timeline.css
+++ b/public/stylesheets/timeline.css
@@ -29,7 +29,6 @@ div.timeline-data {
     float:right;
     position:relative;
     width: 93%;
-    height: 100%;
 }
 
 div.timeline div.days {
